# AHUCM-OJ

./: .gitignore  README.md  config.toml  readme.md
backend/: go.mod  go.sum  main.go
backend/common/: database.go  jwt.go
backend/config/: application.yml
backend/controller/: ContestController.go  ProblemController.go  SubmitController.go  UserController.go  adminController.go
backend/define/: define.go
backend/dto/: contest_dto.go  user_dto.go
backend/global/: status.go
backend/helper/: helper.go  sql.go
backend/middleware/: AuthMiddleware.go  CORSMiddleware.go
backend/migrations/: submittrigger.go
backend/model/: blog.go  blogtag.go  category.go  contest.go  contest_problem.go  contest_rank.go  contest_submit.go  contest_user.go  new.go  permission.go  problem.go  problem_category.go  submission.go  tag.go  testcasefile.go  user.go
backend/router/: routes.go
core/: Cargo.toml  config.toml
core/src/: constants.rs  main.rs
core/src/api/: internal.rs  judge.rs  mod.rs
core/src/model/: mod.rs  submission.rs
core/src/service/: executor.rs  mod.rs  testcase.rs  testcases_getter.rs
core/src/util/: comparer.rs  config.rs  database.rs  mod.rs  thread_pool.rs  unix.rs
docker/: docker-compose.yml  docker-compose.yml.template
frontend/: .eslintrc.js  .gitignore  babel.config.js  package.json  pnpm-lock.yaml  vue.config.js
frontend/public/: index.html  platform-config.json
frontend/src/: App.vue  main.js
frontend/src/components/: CountdownTimer.vue  CurrentTime.vue
scripts/: requirements.txt  run.sh  specify.py
(+71 files in other folders)
