[package]
name = "ahucm_oj_core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.2"
log = { version = "0.4.21", features = ["std"] }
nix = { version = "0.28.0", features = ["process", "fs"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
postgres = "0.19.7"
serde = { version = "1.0.197", features = ["derive"] }
time = "0.3.36"
toml = "0.8.13"
